--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="chat-container">
-        <div id="chat-box" style="height:350px;overflow-y:auto;">
+        <div id="chat-box">
             <div class="message bot-message">
                 <p>¡Hola! Soy tu asistente de ventas. ¿En qué puedo ayudarte hoy?</p>
             </div>
