--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div id="chat-container">
         <div id="chat-box">
             <div class="message bot-message">
-                <p>¡Hola! Soy tu asistente de ventas. ¿En qué puedo ayudarte hoy?</p>
+                <p>¡Hola! Soy tu asesor de ventas con inteligencia artificial. ¿En qué puedo ayudarte hoy?</p>
             </div>
         </div>
         <div id="input-container">
