--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asistente de Ventas</title>
+    <title>Asistente UP CONS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="main-container">
         <div id="chat-container">
             <div id="chat-header">
-                <h1>Asistente de Ventas</h1>
+                <h1>Asistente UP CONS</h1>
             </div>
             <div id="chat-box"></div>
             <div id="input-container">
-                <input type="text" id="user-input" placeholder="Escribe tu pregunta...">
+                <input type="text" id="user-input" placeholder="Escriba su pregunta...">
                 <button id="send-btn">Enviar</button>
             </div>
         </div>
@@ -25,8 +25,16 @@
                 <strong>Total: $0.00</strong>
             </div>
             <div id="contact-info">
-                <p>Para finalizar tu compra, contáctanos:</p>
-                <a href="tel:0983801298" id="call-btn">Llamar al 0983801298</a>
+                <p><strong>UP CONS Importador</strong></p>
+                <p><strong>Direcciones:</strong><br>
+                    - La Ecuatoriana y Martín Santiago Icaza — Sur de Quito<br>
+                    - Av. Mariscal Sucre y Arturo Tipanguano — Sur de Quito
+                </p>
+                <p><strong>Teléfonos:</strong><br>
+                    - <a href="tel:0995986366">0995986366</a><br>
+                    - <a href="tel:0983801298">0983801298</a>
+                </p>
+                <p><strong>Sitio Web:</strong><br><a href="https://www.conupcons.com" target="_blank">www.conupcons.com</a></p>
             </div>
         </div>
     </div>
